--- a/LoginScreen/LoginScreen/Base.lproj/Main.storyboard
+++ b/LoginScreen/LoginScreen/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter email address" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="6dq-vA-sF9">
-                                <rect key="frame" x="28" y="379" width="337" height="63"/>
+                                <rect key="frame" x="28" y="339" width="337" height="63"/>
                                 <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.93725490570000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" button="YES"/>
@@ -54,7 +54,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" tag="15" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wKc-Vh-8Do">
-                                <rect key="frame" x="28" y="464" width="337" height="63"/>
+                                <rect key="frame" x="28" y="424" width="337" height="63"/>
                                 <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.93725490570000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" button="YES"/>
@@ -72,7 +72,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fgM-3I-mig">
-                                <rect key="frame" x="28" y="549" width="337" height="63"/>
+                                <rect key="frame" x="28" y="509" width="337" height="63"/>
                                 <color key="backgroundColor" red="0.24313725490196078" green="0.5411764979" blue="0.8156862855" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="63" id="IQJ-xn-rYZ">
@@ -128,6 +128,14 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L64-KU-Nly">
+                                <rect key="frame" x="28" y="297" width="337" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="zh9-wI-Ru9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="PTMono-Regular" family="PT Mono" pointSize="18"/>
+                                <color key="textColor" systemColor="systemRedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -135,14 +143,17 @@
                             <constraint firstAttribute="trailing" secondItem="fgM-3I-mig" secondAttribute="trailing" constant="28" id="4Q3-qO-GJ4"/>
                             <constraint firstItem="6dq-vA-sF9" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="519-7B-dPj"/>
                             <constraint firstItem="fgM-3I-mig" firstAttribute="top" secondItem="wKc-Vh-8Do" secondAttribute="bottom" constant="22" id="8Hy-ka-CR5"/>
-                            <constraint firstItem="6dq-vA-sF9" firstAttribute="top" secondItem="RoN-R8-t4h" secondAttribute="bottom" constant="150" id="Cad-XP-6aX"/>
                             <constraint firstItem="wKc-Vh-8Do" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="E90-1W-Iym"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wKc-Vh-8Do" secondAttribute="trailing" constant="28" id="Ten-cA-Iu8"/>
                             <constraint firstItem="fgM-3I-mig" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="UgG-sn-Ore"/>
                             <constraint firstItem="tbm-lr-iYe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="VF1-oB-dwT"/>
+                            <constraint firstItem="L64-KU-Nly" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="WIz-n4-RB6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="tbm-lr-iYe" secondAttribute="bottom" constant="25" id="e4M-f6-j32"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tbm-lr-iYe" secondAttribute="trailing" constant="28" id="g8l-EU-zfI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="L64-KU-Nly" secondAttribute="trailing" constant="28" id="grK-3W-qcX"/>
+                            <constraint firstItem="6dq-vA-sF9" firstAttribute="top" secondItem="L64-KU-Nly" secondAttribute="bottom" constant="22" id="hmW-7Q-sgf"/>
                             <constraint firstItem="RoN-R8-t4h" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="nYX-9a-BHU"/>
+                            <constraint firstItem="L64-KU-Nly" firstAttribute="top" secondItem="RoN-R8-t4h" secondAttribute="bottom" constant="68" id="nbp-Pp-KMQ"/>
                             <constraint firstItem="wKc-Vh-8Do" firstAttribute="top" secondItem="6dq-vA-sF9" secondAttribute="bottom" constant="22" id="oAl-SB-NqY"/>
                             <constraint firstAttribute="trailing" secondItem="6dq-vA-sF9" secondAttribute="trailing" constant="28" id="tBB-13-VZh"/>
                             <constraint firstItem="RoN-R8-t4h" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="130" id="xkn-gf-uOS"/>
@@ -157,8 +168,8 @@
                     <navigationItem key="navigationItem" id="p2f-U6-e7c"/>
                     <connections>
                         <outlet property="emailTF" destination="6dq-vA-sF9" id="j9X-Kb-esD"/>
+                        <outlet property="foundError" destination="L64-KU-Nly" id="m5x-IS-1Rt"/>
                         <outlet property="infoLabel" destination="RoN-R8-t4h" id="KrS-3c-nGv"/>
-                        <outlet property="infoLabelBottomConstraint" destination="Cad-XP-6aX" id="tiy-uD-etW"/>
                         <outlet property="infoLabelTopConstraint" destination="xkn-gf-uOS" id="nff-Lk-JHk"/>
                         <outlet property="informationLabel" destination="tbm-lr-iYe" id="5oL-ss-x8N"/>
                         <outlet property="logInButton" destination="fgM-3I-mig" id="x2b-Vz-NOr"/>
@@ -408,6 +419,9 @@
         <image name="Image 1" width="278" height="300"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
